   selected cells are painted twice, once with the correct "cell_XX" setting,
   and then with an incorrect one!
4. Fix size of focus indicator in treeviews iwth SWT apps.
5. Use list style pop-up for non-editable combos when not using Gtk-style
   combos - matches KDE behaviour.
6. Fix buttons in chromiums menu - mouse over colour, and text colour when using
   darker colour schemes.

1.7.2
-----
 1. Allow editable combo-box popup to be rounded.
 2. Fix initial treeview highlight.
 3. Fix rounded popup border when using compositing.
 4. Add vmware, vmplayer, and gtk to list of app to exclude from opacity settings. 
    This also prevents using RGBA for rounded tooltips and popup menus.
 5. Fix opacity setting of squared popup menus.
 6. Improve group-box label positioning.
 7. Fix line-style group box when text is above or below the line.
 8. Fix crash when using a tiled image for background appearance, but not for menu
    appearance - was using wrong config item!
 9. Fix border of hovered treeview items.
10. Allow combo popupmenus to be rounded if not using compositing.
11. Set/clear widget masks when compositing toggled.
12. Fix treeview line end detection.
13. Fix treeview selection, and line, corruption.
14. Fix treeview line dimensions.
15. Fix size of fonts in GIMPs dock.
16. Fix firefox scrollbar background when using flat buttons and flat background.
17. Fix clipping issues with full and filled focus types.
18. For configs older than 1.7.2, disable usage of alpha channel to draw rounded
    tooltips and popup menus. Too many issues with apps to enable this by default.

1.7.1
-----
1. Use rgba colormap to draw rounded tooltips and popup menus - gives nicer border.
   This may be disabled via KDE4 config dialog.
2. Allow 'menus' of non-editable combos to be rounded. (But *only* if the app can
   be set to use an rgba colormap)
3. Remove resize grips - kwin handles this.
4. Add mouse tracking to treeview lists.
5. Indent treeview selection as per KDE.