@@ -39,10 +39,6 @@ The following options may be supplied to cmake:
        that for intel Xorg drivers >2.8, that drawing these non-antialised arrows with
        cairo results in nothing being drawn! As of 0.69.0, the default is to use Gdk
 
-    -DQTC_CAIRO_1_10_HACK=true
-       Duplicate each stop in a gradient - seems to workaround issues with NVIDIA and
-       cairo 1.10. NOTE: This may have an impact on performance.
-
     -DQTC_STYLE_SUPPORT=true
        Support QtCurve style files. These are stored as
        <kde prefix>/share/apps/kstyle/themes/qtc_<stylename>.themerc
