@@ -29,6 +29,12 @@
 #define COMMON_FUNCTIONS
 #include "qtcurve.h"
 
+#if (CAIRO_VERSION >= CAIRO_VERSION_ENCODE(1, 10, 0))
+#define CAIRO_GRAD_END 0.999
+#else
+#define CAIRO_GRAD_END 1.0
+#endif
+
 #define MO_ARROW(MENU, COL) (!MENU && MO_NONE!=opts.coloredMouseOver && GTK_STATE_PRELIGHT==state \
                                     ? &qtcPalette.mouseover[ARROW_MO_SHADE] : (COL))
 
@@ -1525,6 +1531,7 @@ static void drawBevelGradientAlpha(cairo_t *cr, GtkStyle *style, GdkRectangle *a
         for(i=0; i<grad->numStops; ++i)
         {
             GdkColor col;
+            double   pos=botTab ? 1.0-grad->stops[i].pos : grad->stops[i].pos;
             
             if(/*sel && */(topTab || botTab) && i==grad->numStops-1)
             {
@@ -1538,12 +1545,11 @@ static void drawBevelGradientAlpha(cairo_t *cr, GtkStyle *style, GdkRectangle *a
                 shade(&opts, base, &col, botTab && opts.invertBotTab ? MAX(val, 0.9) : val);
             }
 
-#ifdef QTC_CAIRO_1_10_HACK
-            if(0==i || i==(grad->numStops-1))
-                cairo_pattern_add_color_stop_rgba(pt, botTab ? 1.0-grad->stops[i].pos : grad->stops[i].pos,
-                                                  CAIRO_COL(col), alpha*grad->stops[i].alpha);
+#if (CAIRO_VERSION >= CAIRO_VERSION_ENCODE(1, 10, 0))
+            if(pos>0.9999)
+                pos=0.999;
 #endif
-            cairo_pattern_add_color_stop_rgba(pt, botTab ? 1.0-grad->stops[i].pos : grad->stops[i].pos,
+            cairo_pattern_add_color_stop_rgba(pt, pos,
                                               CAIRO_COL(col), alpha*grad->stops[i].alpha);
         }
 
@@ -1551,12 +1557,14 @@ static void drawBevelGradientAlpha(cairo_t *cr, GtkStyle *style, GdkRectangle *a
         {
             GdkColor col;
             double pos=AGUA_MAX/((horiz ? height : width)*2.0);
+            
+#if (CAIRO_VERSION >= CAIRO_VERSION_ENCODE(1, 10, 0))
+            if(pos>0.9999)
+                pos=0.999;
+#endif
+
             shade(&opts, base, &col, AGUA_MID_SHADE);
             cairo_pattern_add_color_stop_rgba(pt, pos, CAIRO_COL(col), alpha); /* *grad->stops[i].alpha); */
-#ifdef QTC_CAIRO_1_10_HACK
-            cairo_pattern_add_color_stop_rgba(pt, pos, CAIRO_COL(col), alpha); /* *grad->stops[i].alpha); */
-            cairo_pattern_add_color_stop_rgba(pt, 1.0-pos, CAIRO_COL(col), alpha); /* *grad->stops[i].alpha); */
-#endif
             cairo_pattern_add_color_stop_rgba(pt, 1.0-pos, CAIRO_COL(col), alpha); /* *grad->stops[i].alpha); */
         }
 
@@ -1892,11 +1900,7 @@ static void addStripes(cairo_t *cr, int x, int y, int w, int h, bool horizontal)
     cairo_pattern_t *pat=cairo_pattern_create_linear(x, y, x+endx, y+endy);
 
     cairo_pattern_add_color_stop_rgba(pat, 0.0, 1.0, 1.0, 1.0, 0.0);
-#ifdef QTC_CAIRO_1_10_HACK    
-    cairo_pattern_add_color_stop_rgba(pat, 0.0, 1.0, 1.0, 1.0, 0.0);
-    cairo_pattern_add_color_stop_rgba(pat, 1.0, 1.0, 1.0, 1.0, 0.15);
-#endif
-    cairo_pattern_add_color_stop_rgba(pat, 1.0, 1.0, 1.0, 1.0, 0.15);
+    cairo_pattern_add_color_stop_rgba(pat, CAIRO_GRAD_END, 1.0, 1.0, 1.0, 0.15);
     cairo_pattern_set_extend(pat, CAIRO_EXTEND_REFLECT);
     cairo_set_source(cr, pat);
     cairo_rectangle(cr, x, y, w, h);
@@ -2054,11 +2058,7 @@ static void drawLightBevel(cairo_t *cr, GtkStyle *style, GtkStateType state, Gdk
                 clipPathRadius(cr, topGradRectX+0.5, topGradRectY+0.5, topGradRectW, topGradRectH, topGradRectW/2.0, ROUNDED_ALL);
 
                 cairo_pattern_add_color_stop_rgba(pt, 0.0, 1.0, 1.0, 1.0, mo ? (opts.highlightFactor>0 ? 0.8 : 0.7) : 0.75);
-#ifdef QTC_CAIRO_1_10_HACK
-                cairo_pattern_add_color_stop_rgba(pt, 0.0, 1.0, 1.0, 1.0, mo ? (opts.highlightFactor>0 ? 0.8 : 0.7) : 0.75);
-                cairo_pattern_add_color_stop_rgba(pt, 1.0, 1.0, 1.0, 1.0, /*mo ? (opts.highlightFactor>0 ? 0.3 : 0.1) :*/ 0.2);
-#endif
-                cairo_pattern_add_color_stop_rgba(pt, 1.0, 1.0, 1.0, 1.0, /*mo ? (opts.highlightFactor>0 ? 0.3 : 0.1) :*/ 0.2);
+                cairo_pattern_add_color_stop_rgba(pt, CAIRO_GRAD_END, 1.0, 1.0, 1.0, /*mo ? (opts.highlightFactor>0 ? 0.3 : 0.1) :*/ 0.2);
 
                 cairo_set_source(cr, pt);
                 cairo_rectangle(cr, topGradRectX, topGradRectY, topGradRectW, topGradRectH);
@@ -2102,11 +2102,7 @@ static void drawLightBevel(cairo_t *cr, GtkStyle *style, GtkStateType state, Gdk
                     clipPathRadius(cr, xa+0.5, ya+mod+0.5, size-1, ha-(mod*2)-1, rad, round);
 
                 cairo_pattern_add_color_stop_rgba(pt, 0.0, 1.0, 1.0, 1.0, mo ? (opts.highlightFactor>0 ? 0.95 : 0.85) : 0.9);
-#ifdef QTC_CAIRO_1_10_HACK
-                cairo_pattern_add_color_stop_rgba(pt, 0.0, 1.0, 1.0, 1.0, mo ? (opts.highlightFactor>0 ? 0.95 : 0.85) : 0.9);
-                cairo_pattern_add_color_stop_rgba(pt, 1.0, 1.0, 1.0, 1.0, mo ? (opts.highlightFactor>0 ? 0.3 : 0.1) : 0.2);
-#endif
-                cairo_pattern_add_color_stop_rgba(pt, 1.0, 1.0, 1.0, 1.0, mo ? (opts.highlightFactor>0 ? 0.3 : 0.1) : 0.2);
+                cairo_pattern_add_color_stop_rgba(pt, CAIRO_GRAD_END, 1.0, 1.0, 1.0, mo ? (opts.highlightFactor>0 ? 0.3 : 0.1) : 0.2);
 
                 cairo_set_source(cr, pt);
                 cairo_rectangle(cr, xa, ya, horiz ? wa : size, horiz ? size : ha);
@@ -2253,12 +2249,8 @@ static void drawFadedLineReal(cairo_t *cr, int x, int y, int width, int height, 
         setCairoClipping(cr, area);
     cairo_pattern_add_color_stop_rgba(pt, 0, CAIRO_COL(*col), fadeStart && opts.fadeLines ? 0.0 : alpha);
     cairo_pattern_add_color_stop_rgba(pt, FADE_SIZE, CAIRO_COL(*col), alpha);
-#ifdef QTC_CAIRO_1_10_HACK
-    cairo_pattern_add_color_stop_rgba(pt, FADE_SIZE, CAIRO_COL(*col), alpha);
     cairo_pattern_add_color_stop_rgba(pt, 1.0-FADE_SIZE, CAIRO_COL(*col), alpha);
-#endif
-    cairo_pattern_add_color_stop_rgba(pt, 1.0-FADE_SIZE, CAIRO_COL(*col), alpha);
-    cairo_pattern_add_color_stop_rgba(pt, 1, CAIRO_COL(*col), fadeEnd && opts.fadeLines ? 0.0 : alpha);
+    cairo_pattern_add_color_stop_rgba(pt, CAIRO_GRAD_END, CAIRO_COL(*col), fadeEnd && opts.fadeLines ? 0.0 : alpha);
     cairo_set_source(cr, pt);
     if(horiz)
     {
@@ -2288,12 +2280,8 @@ static void setLineCol(cairo_t *cr, cairo_pattern_t *pt, GdkColor *col)
     {
         cairo_pattern_add_color_stop_rgba(pt, 0, CAIRO_COL(*col), 0.0);
         cairo_pattern_add_color_stop_rgba(pt, 0.4, CAIRO_COL(*col), 1.0);
-#ifdef QTC_CAIRO_1_10_HACK
-        cairo_pattern_add_color_stop_rgba(pt, 0.4, CAIRO_COL(*col), 1.0);
         cairo_pattern_add_color_stop_rgba(pt, 0.6, CAIRO_COL(*col), 1.0);
-#endif
-        cairo_pattern_add_color_stop_rgba(pt, 0.6, CAIRO_COL(*col), 1.0);
-        cairo_pattern_add_color_stop_rgba(pt, 1, CAIRO_COL(*col), 0.0);
+        cairo_pattern_add_color_stop_rgba(pt, CAIRO_GRAD_END, CAIRO_COL(*col), 0.0);
         cairo_set_source(cr, pt);
     }
     else
@@ -2389,17 +2377,9 @@ static void drawDot(cairo_t *cr, int x, int y, int w, int h, GdkColor *cols)
                     *p2=cairo_pattern_create_linear(dx+2, dy+2, dx+4, dx+4);
 
     cairo_pattern_add_color_stop_rgba(p1, 0.0, CAIRO_COL(cols[STD_BORDER]), 1.0);
-#ifdef QTC_CAIRO_1_10_HACK
-    cairo_pattern_add_color_stop_rgba(p1, 0.0, CAIRO_COL(cols[STD_BORDER]), 1.0);
-    cairo_pattern_add_color_stop_rgba(p1, 1.0, CAIRO_COL(cols[STD_BORDER]), 0.4);
-#endif
-    cairo_pattern_add_color_stop_rgba(p1, 1.0, CAIRO_COL(cols[STD_BORDER]), 0.4);
+    cairo_pattern_add_color_stop_rgba(p1, CAIRO_GRAD_END, CAIRO_COL(cols[STD_BORDER]), 0.4);
 
-    cairo_pattern_add_color_stop_rgba(p2, 1.0, 1.0, 1.0, 1.0, 0.9);
-#ifdef QTC_CAIRO_1_10_HACK
-    cairo_pattern_add_color_stop_rgba(p2, 1.0, 1.0, 1.0, 1.0, 0.9);
-    cairo_pattern_add_color_stop_rgba(p2, 0.0, 1.0, 1.0, 1.0, 0.7);
-#endif
+    cairo_pattern_add_color_stop_rgba(p2, CAIRO_GRAD_END, 1.0, 1.0, 1.0, 0.9);
     cairo_pattern_add_color_stop_rgba(p2, 0.0, 1.0, 1.0, 1.0, 0.7);
 
     cairo_new_path(cr);
@@ -2721,10 +2701,6 @@ static void drawStripedBgnd(cairo_t *cr, GtkStyle *style, GdkRectangle *area, gi
     cairo_pattern_t *pat=cairo_pattern_create_linear(x, y, x, y+4);
     cairo_pattern_add_color_stop_rgba(pat, 0.0, CAIRO_COL(*col), alpha);
     cairo_pattern_add_color_stop_rgba(pat, 0.25-0.0001, CAIRO_COL(*col), alpha);
-#ifdef QTC_CAIRO_1_10_HACK
-    cairo_pattern_add_color_stop_rgba(pat, 0.25-0.0001, CAIRO_COL(*col), alpha);
-    cairo_pattern_add_color_stop_rgba(pat, 0.5, CAIRO_COL(col2), alpha);
-#endif
     cairo_pattern_add_color_stop_rgba(pat, 0.5, CAIRO_COL(col2), alpha);
     cairo_pattern_add_color_stop_rgba(pat, 0.75-0.0001, CAIRO_COL(col2), alpha);
     col2.red=(3*col->red+col2.red)/4;
@@ -2732,12 +2708,8 @@ static void drawStripedBgnd(cairo_t *cr, GtkStyle *style, GdkRectangle *area, gi
     col2.blue=(3*col->blue+col2.blue)/4;
     cairo_pattern_add_color_stop_rgba(pat, 0.25, CAIRO_COL(col2), alpha);
     cairo_pattern_add_color_stop_rgba(pat, 0.5-0.0001, CAIRO_COL(col2), alpha);
-#ifdef QTC_CAIRO_1_10_HACK
-    cairo_pattern_add_color_stop_rgba(pat, 0.5-0.0001, CAIRO_COL(col2), alpha);
     cairo_pattern_add_color_stop_rgba(pat, 0.75, CAIRO_COL(col2), alpha);
-#endif
-    cairo_pattern_add_color_stop_rgba(pat, 0.75, CAIRO_COL(col2), alpha);
-    cairo_pattern_add_color_stop_rgba(pat, 1.0, CAIRO_COL(col2), alpha);
+    cairo_pattern_add_color_stop_rgba(pat, CAIRO_GRAD_END, CAIRO_COL(col2), alpha);
 
     cairo_pattern_set_extend(pat, CAIRO_EXTEND_REPEAT);
     cairo_set_source(cr, pat);
@@ -2921,12 +2893,8 @@ static gboolean drawWindowBgnd(cairo_t *cr, GtkStyle *style, GdkRectangle *area,
                     pat=cairo_pattern_create_radial(x+xmod+(wwidth/2.0), ypos+ymod, 0, x+xmod+(wwidth/2.0), ypos+ymod, size/2.0);
                     cairo_pattern_add_color_stop_rgba(pat, 0, 1, 1, 1, alpha);
                     cairo_pattern_add_color_stop_rgba(pat, 0.5, 1, 1, 1, alpha*0.625);
-#ifdef QTC_CAIRO_1_10_HACK
-                    cairo_pattern_add_color_stop_rgba(pat, 0.5, 1, 1, 1, alpha*0.625);
                     cairo_pattern_add_color_stop_rgba(pat, 0.75, 1, 1, 1, alpha*0.175);
-#endif
-                    cairo_pattern_add_color_stop_rgba(pat, 0.75, 1, 1, 1, alpha*0.175);
-                    cairo_pattern_add_color_stop_rgba(pat, 1.0, 1, 1, 1, 0.0);
+                    cairo_pattern_add_color_stop_rgba(pat, CAIRO_GRAD_END, 1, 1, 1, 0.0);
                     cairo_set_source(cr, pat);
                     cairo_rectangle(cr, x+xmod+((wwidth-size)/2.0), ypos+ymod, size, size);
                     cairo_fill(cr);
@@ -3246,17 +3214,11 @@ static void drawProgress(cairo_t *cr, GtkStyle *style, GtkStateType state, GtkWi
 
             cairo_pattern_add_color_stop_rgba(pat, 0.0, 1.0, 1.0, 1.0,
                                               (inverted ? GLOW_END : GLOW_START)==opts.glowProgress ? GLOW_PROG_ALPHA : 0.0);
-#ifdef QTC_CAIRO_1_10_HACK
-            cairo_pattern_add_color_stop_rgba(pat, 0.0, 1.0, 1.0, 1.0,
-                                              (inverted ? GLOW_END : GLOW_START)==opts.glowProgress ? GLOW_PROG_ALPHA : 0.0);
-#endif
+
             if(GLOW_MIDDLE==opts.glowProgress)
                 cairo_pattern_add_color_stop_rgba(pat, 0.5, 1.0, 1.0, 1.0, GLOW_PROG_ALPHA);
-#ifdef QTC_CAIRO_1_10_HACK
-            cairo_pattern_add_color_stop_rgba(pat, 1.0, 1.0, 1.0, 1.0,
-                                              (inverted ? GLOW_START : GLOW_END)==opts.glowProgress ? GLOW_PROG_ALPHA : 0.0);
-#endif
-            cairo_pattern_add_color_stop_rgba(pat, 1.0, 1.0, 1.0, 1.0,
+
+            cairo_pattern_add_color_stop_rgba(pat, CAIRO_GRAD_END, 1.0, 1.0, 1.0,
                                               (inverted ? GLOW_START : GLOW_END)==opts.glowProgress ? GLOW_PROG_ALPHA : 0.0);
             cairo_set_source(cr, pat);
             cairo_rectangle(cr, x+offset, y+offset, width-(2*offset), height-(2*offset));
@@ -5628,14 +5590,8 @@ static void drawBox(GtkStyle *style, WINDOW_PARAM GtkStateType state, GtkShadowT
                 pt=cairo_pattern_create_linear(x, y, x+width-1, y);
 
                 cairo_pattern_add_color_stop_rgba(pt, 0, CAIRO_COL(itemCols[fillVal]), reverse ? 0.0 : 1.0);
-#ifdef QTC_CAIRO_1_10_HACK
-                cairo_pattern_add_color_stop_rgba(pt, 0, CAIRO_COL(itemCols[fillVal]), reverse ? 0.0 : 1.0);
-#endif
                 cairo_pattern_add_color_stop_rgba(pt, reverse ? fadePercent : 1.0-fadePercent, CAIRO_COL(itemCols[fillVal]), 1.0);
-#ifdef QTC_CAIRO_1_10_HACK  
-                cairo_pattern_add_color_stop_rgba(pt, 1.00, CAIRO_COL(itemCols[fillVal]), reverse ? 1.0 : 0.0);
-#endif
-                cairo_pattern_add_color_stop_rgba(pt, 1.00, CAIRO_COL(itemCols[fillVal]), reverse ? 1.0 : 0.0);
+                cairo_pattern_add_color_stop_rgba(pt, CAIRO_GRAD_END, CAIRO_COL(itemCols[fillVal]), reverse ? 1.0 : 0.0);
                 cairo_set_source(cr, pt);
                 cairo_rectangle(cr, x, y, width, height);
                 cairo_fill(cr);
@@ -7201,13 +7157,7 @@ static void colorTab(cairo_t *cr, int x, int y, int width, int height, int round
     clipPath(cr, x, y, width, height, tab, RADIUS_EXTERNAL, round);
     cairo_pattern_add_color_stop_rgba(pt, 0, CAIRO_COL(qtcPalette.highlight[ORIGINAL_SHADE]),
                                       WIDGET_TAB_TOP==tab ? (TO_ALPHA(opts.colorSelTab)) : 0.0);
-#ifdef QTC_CAIRO_1_10_HACK
-    cairo_pattern_add_color_stop_rgba(pt, 0, CAIRO_COL(qtcPalette.highlight[ORIGINAL_SHADE]),
-                                      WIDGET_TAB_TOP==tab ? (TO_ALPHA(opts.colorSelTab)) : 0.0);
-    cairo_pattern_add_color_stop_rgba(pt, 1, CAIRO_COL(qtcPalette.highlight[ORIGINAL_SHADE]),
-                                      WIDGET_TAB_TOP==tab ? 0.0 : (TO_ALPHA(opts.colorSelTab)));
-#endif
-    cairo_pattern_add_color_stop_rgba(pt, 1, CAIRO_COL(qtcPalette.highlight[ORIGINAL_SHADE]),
+    cairo_pattern_add_color_stop_rgba(pt, CAIRO_GRAD_END, CAIRO_COL(qtcPalette.highlight[ORIGINAL_SHADE]),
                                       WIDGET_TAB_TOP==tab ? 0.0 : (TO_ALPHA(opts.colorSelTab)));
     cairo_set_source(cr, pt);
     cairo_rectangle(cr, x, y, width, height);
@@ -7906,11 +7856,7 @@ static void gtkDrawShadowGap(GtkStyle *style, WINDOW_PARAM GtkStateType state, G
                         {
                             pt=cairo_pattern_create_linear(x, y, x, y+height-1);
                             cairo_pattern_add_color_stop_rgba(pt, 0, col, col, col, TO_ALPHA(opts.gbFactor));
-#ifdef QTC_CAIRO_1_10_HACK
-                            cairo_pattern_add_color_stop_rgba(pt, 0, col, col, col, TO_ALPHA(opts.gbFactor));
-                            cairo_pattern_add_color_stop_rgba(pt, 1, col, col, col, 0);
-#endif
-                            cairo_pattern_add_color_stop_rgba(pt, 1, col, col, col, 0);
+                            cairo_pattern_add_color_stop_rgba(pt, CAIRO_GRAD_END, col, col, col, 0);
                             cairo_set_source(cr, pt);
                         }
                         cairo_fill(cr);
@@ -7922,11 +7868,7 @@ static void gtkDrawShadowGap(GtkStyle *style, WINDOW_PARAM GtkStateType state, G
                     {
                         pt=cairo_pattern_create_linear(x, y, x, y+height-1);
                         cairo_pattern_add_color_stop_rgba(pt, 0, CAIRO_COL(qtcPalette.background[STD_BORDER]), 1.0);
-#ifdef QTC_CAIRO_1_10_HACK
-                        cairo_pattern_add_color_stop_rgba(pt, 0, CAIRO_COL(qtcPalette.background[STD_BORDER]), 1.0);
-                        cairo_pattern_add_color_stop_rgba(pt, 1, CAIRO_COL(qtcPalette.background[STD_BORDER]), 0);
-#endif
-                        cairo_pattern_add_color_stop_rgba(pt, 1, CAIRO_COL(qtcPalette.background[STD_BORDER]), 0);
+                        cairo_pattern_add_color_stop_rgba(pt, CAIRO_GRAD_END, CAIRO_COL(qtcPalette.background[STD_BORDER]), 0);
                         setGapClip(cr, area, gap_side, gap_x, gap_width, x, y, width, height, FALSE);
                         cairo_set_source(cr, pt);
                         createPath(cr, x+0.5, y+0.5, width-1, height-1, radius, round);
